fix: blur window on Withdraw overlaps dropdown

--- a/web/src/components/Beneficiaries/Beneficiaries.pcss
+++ b/web/src/components/Beneficiaries/Beneficiaries.pcss
@@ -278,7 +278,7 @@
       top: 110px;
       transition: 0.2s;
       width: 100%;
-      z-index: 10000;
+      z-index: var(--z-index-dropdown);
 
       &__item,
       .item {
